fix text align

--- a/main.css
+++ b/main.css
@@ -1,3 +1,4 @@
 h1 {
-	align-items: center;
+	text-align: center;
+	background-color: #345500;
 }
